--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,5 @@
   .toast-warning {
     background-color: #f89406;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
